# django-min-custom-user

./: README.md  pyproject.toml
django_min_custom_user/: admin.py  apps.py  manager.py  models.py
django_project_ex/: manage.py  pyproject.toml
django_project_ex/custom_user_app/: admin.py
django_project_ex/custom_user_app/tests/: test_manager.py
django_project_ex/min_custom_user/: asgi.py  settings.py  urls.py  wsgi.py
