[tool.poetry]
name = "django-min-custom-user"
version = "0.2.0"
description = "A project with a mininum fields Django Custom User"
authors = ["Renzo Nuccitelli <renzo.n@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
