[tool.poetry]
name = "django-project-ex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
pytest = "^8.2.2"
pytest-django = "^4.8.0"
django-min-custom-user = {path = ".."}


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "min_custom_user.settings"
python_files = ["test*.py", "*test.py", "testing/python/*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
